--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -391,6 +391,25 @@ publish-gems:
   script:
     - ./publish-gems.sh
 
+publish-docker:
+  image: docker:latest
+  services:
+  - docker:dind
+  stage: publish
+  # Only run if this is triggered from the web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "web"
+      when: on_success
+    - when: never
+  tags:
+    - osuosl
+  dependencies:
+    - patch
+  script:
+    - ./docker.sh
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
+
 .cleanup:
   stage: cleanup
   dependencies: []
