add Ubuntu 20.04 (aka Focal Fossa) to gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,6 +105,15 @@ package:ubuntu-18.04:
     - mkdir -p ${CI_PROJECT_DIR}/data/ubuntu/18.04
     - mv -v ${CI_PROJECT_DIR}/data/*.{rpm,deb,json} ${CI_PROJECT_DIR}/data/ubuntu/18.04/
 
+package:ubuntu-20.04:
+  extends: .package
+  image: cincproject/omnibus-ubuntu:20.04
+  cache:
+    key: ubuntu:20.04
+  after_script:
+    - mkdir -p ${CI_PROJECT_DIR}/data/ubuntu/20.04
+    - mv -v ${CI_PROJECT_DIR}/data/*.{rpm,deb,json} ${CI_PROJECT_DIR}/data/ubuntu/20.04/
+
 package:centos-6:
   extends: .package
   image: cincproject/omnibus-centos:6
@@ -259,6 +268,14 @@ test:ubuntu-18.04:
   before_script:
     - dpkg -i data/ubuntu/18.04/cinc-auditor*.deb
 
+test:ubuntu-20.04:
+  extends: .test
+  image: cincproject/omnibus-ubuntu:20.04
+  dependencies:
+    - package:ubuntu-20.04
+  before_script:
+    - dpkg -i data/ubuntu/20.04/cinc-auditor*.deb
+
 test:centos-6:
   extends: .test
   image: cincproject/omnibus-centos:6
@@ -348,6 +365,7 @@ deploy:
     - package:debian-10
     - package:ubuntu-16.04
     - package:ubuntu-18.04
+    - package:ubuntu-20.04
     - package:centos-6
     - package:centos-7
     - package:centos-8
