--- a/.gitlab/test.yml
+++ b/.gitlab/test.yml
@@ -5,6 +5,13 @@
     - cinc-auditor detect
     - cinc-auditor exec test-baseline
 
+.test:amazonlinux:
+  extends: .test
+  before_script:
+    - yum -y install data/amazon/${PLATFORM_VER}/cinc*.rpm
+  after_script:
+    - yum -y remove cinc
+
 .test:centos:
   extends: .test
   before_script:
