Add needs for package/test stages
- Move biome jobs into the various sections with other similar jobs to make it
  easier to read.
- Ensure deploy/publish stages only use dependencies and only happen when
  executed from the web.

Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,32 @@ patch:
   before_script:
     - scripts/install-biome.sh
 
+# Package stage
+
+package:amazonlinux-2:x86_64:
+  extends: .package:amazonlinux
+  image: cincproject/omnibus-amazonlinux:2
+  cache:
+    key: amazonlinux:2:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "2"
+
+package:amazonlinux-2:aarch64:
+  extends: .package:amazonlinux
+  image: cincproject/omnibus-amazonlinux:2
+  cache:
+    key: amazonlinux:2:aarch64
+  tags:
+    - docker-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "2"
+
 # Needs HAB_AUTH_TOKEN and HAB_ORIGIN environment variables set.
 package:bio:linux:
   stage: package
@@ -62,6 +88,205 @@ package:bio:linux:
   artifacts:
     paths:
       - results/*.hart
+
+package:centos-6:x86_64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos:6
+  cache:
+    key: centos:6:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "6"
+
+package:centos-7:x86_64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos:7
+  cache:
+    key: centos:7:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "7"
+
+package:centos-7:aarch64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos:7
+  cache:
+    key: centos:7:aarch64
+  tags:
+    - docker-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "7"
+
+package:centos-8:x86_64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos:8
+  cache:
+    key: centos:8:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "8"
+
+package:centos-8:aarch64:
+  extends: .package:centos
+  image: cincproject/omnibus-centos:8
+  cache:
+    key: centos:8:aarch64
+  tags:
+    - docker-aarch64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "8"
+
+package:debian-8:x86_64:
+  extends: .package:debian
+  image: cincproject/omnibus-debian:8
+  cache:
+    key: debian:8:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "8"
+
+package:debian-9:x86_64:
+  extends: .package:debian
+  image: cincproject/omnibus-debian:9
+  cache:
+    key: debian:9:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "9"
+
+package:debian-10:x86_64:
+  extends: .package:debian
+  image: cincproject/omnibus-debian:10
+  cache:
+    key: debian:10:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "10"
+
+package:macos-10.14:
+  extends: .package:macos
+  cache:
+    key: macos:10.14
+  tags:
+    - macos-10.14
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "10.14"
+
+package:macos-10.15:
+  extends: .package:macos
+  cache:
+    key: macos:10.15
+  tags:
+    - macos-10.15
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "10.15"
+
+package:opensuse-15:x86_64:
+  extends: .package:opensuse
+  image: cincproject/omnibus-opensuse:15
+  cache:
+    key: opensuse:15:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "15"
+
+package:windows-2012r2:
+  extends: .package:windows
+  cache:
+    key: windows-2012r2
+  tags:
+    - windows-x64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "2012r2"
+
+package:ubuntu-16.04:x86_64:
+  extends: .package:ubuntu
+  image: cincproject/omnibus-ubuntu:16.04
+  cache:
+    key: ubuntu:16.04:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "16.04"
+
+package:ubuntu-18.04:x86_64:
+  extends: .package:ubuntu
+  image: cincproject/omnibus-ubuntu:18.04
+  cache:
+    key: ubuntu:18.04:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "18.04"
+
+package:ubuntu-20.04:x86_64:
+  extends: .package:ubuntu
+  image: cincproject/omnibus-ubuntu:20.04
+  cache:
+    key: ubuntu:20.04:x86_64
+  tags:
+    - docker-x86_64
+  needs:
+    - patch
+  variables:
+    PLATFORM_VER: "20.04"
+
+# Test stage
+
+test:amazonlinux-2:x86_64:
+  extends: .test:amazonlinux
+  image: cincproject/omnibus-amazonlinux:2
+  needs:
+    - package:amazonlinux-2:x86_64
+  tags:
+    - docker-x86_64
+  variables:
+    PLATFORM_VER: "2"
+
+test:amazonlinux-2:aarch64:
+  extends: .test:amazonlinux
+  image: cincproject/omnibus-amazonlinux:2
+  needs:
+    - package:amazonlinux-2:aarch64
+  tags:
+    - docker-aarch64
+  variables:
+    PLATFORM_VER: "2"
 
 test:bio:linux:
   stage: test
@@ -81,229 +306,10 @@ test:bio:linux:
     - cinc-auditor detect
     - cinc-auditor exec test-baseline
 
-deploy:bio:linux:
-  stage: deploy
-  extends:
-    - .bio_setup
-  tags:
-    - docker-x86_64
-  needs:
-    - package:bio:linux
-    - test:bio:linux
-  script:
-    - bio pkg upload results/*.hart
-
-publish:bio:linux:
-  needs:
-    - package:bio:linux 
-    - deploy:bio:linux
-  extends:
-    - .bio_setup
-  stage: publish
-  rules:
-    - if: $CI_PIPELINE_SOURCE == "web"
-      when: on_success
-    - when: never
-  script:
-    - bio pkg install core/jq-static -b
-    - export PKG=$(bio pkg info results/*.hart -j | jq '[.origin,.name,.version,.release] | join("/")')
-    - bio pkg promote $PKG $CHANNEL
-
-# Package stage
-
-package:amazonlinux-2:x86_64:
-  extends: .package:amazonlinux
-  image: cincproject/omnibus-amazonlinux:2
-  cache:
-    key: amazonlinux:2:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "2"
-
-package:amazonlinux-2:aarch64:
-  extends: .package:amazonlinux
-  image: cincproject/omnibus-amazonlinux:2
-  cache:
-    key: amazonlinux:2:aarch64
-  tags:
-    - docker-aarch64
-  variables:
-    PLATFORM_VER: "2"
-
-package:centos-6:x86_64:
-  extends: .package:centos
-  image: cincproject/omnibus-centos:6
-  cache:
-    key: centos:6:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "6"
-
-package:centos-7:x86_64:
-  extends: .package:centos
-  image: cincproject/omnibus-centos:7
-  cache:
-    key: centos:7:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "7"
-
-package:centos-7:aarch64:
-  extends: .package:centos
-  image: cincproject/omnibus-centos:7
-  cache:
-    key: centos:7:aarch64
-  tags:
-    - docker-aarch64
-  variables:
-    PLATFORM_VER: "7"
-
-package:centos-8:x86_64:
-  extends: .package:centos
-  image: cincproject/omnibus-centos:8
-  cache:
-    key: centos:8:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "8"
-
-package:centos-8:aarch64:
-  extends: .package:centos
-  image: cincproject/omnibus-centos:8
-  cache:
-    key: centos:8:aarch64
-  tags:
-    - docker-aarch64
-  variables:
-    PLATFORM_VER: "8"
-
-package:debian-8:x86_64:
-  extends: .package:debian
-  image: cincproject/omnibus-debian:8
-  cache:
-    key: debian:8:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "8"
-
-package:debian-9:x86_64:
-  extends: .package:debian
-  image: cincproject/omnibus-debian:9
-  cache:
-    key: debian:9:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "9"
-
-package:debian-10:x86_64:
-  extends: .package:debian
-  image: cincproject/omnibus-debian:10
-  cache:
-    key: debian:10:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "10"
-
-package:macos-10.14:
-  extends: .package:macos
-  cache:
-    key: macos:10.14
-  tags:
-    - macos-10.14
-  variables:
-    PLATFORM_VER: "10.14"
-
-package:macos-10.15:
-  extends: .package:macos
-  cache:
-    key: macos:10.15
-  tags:
-    - macos-10.15
-  variables:
-    PLATFORM_VER: "10.15"
-
-package:opensuse-15:x86_64:
-  extends: .package:opensuse
-  image: cincproject/omnibus-opensuse:15
-  cache:
-    key: opensuse:15:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "15"
-
-package:windows-2012r2:
-  extends: .package:windows
-  tags:
-    - windows-x64
-  cache:
-    key: windows-2012r2
-  variables:
-    PLATFORM_VER: "2012r2"
-
-package:ubuntu-16.04:x86_64:
-  extends: .package:ubuntu
-  image: cincproject/omnibus-ubuntu:16.04
-  cache:
-    key: ubuntu:16.04:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "16.04"
-
-package:ubuntu-18.04:x86_64:
-  extends: .package:ubuntu
-  image: cincproject/omnibus-ubuntu:18.04
-  cache:
-    key: ubuntu:18.04:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "18.04"
-
-package:ubuntu-20.04:x86_64:
-  extends: .package:ubuntu
-  image: cincproject/omnibus-ubuntu:20.04
-  cache:
-    key: ubuntu:20.04:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "20.04"
-
-# Test stage
-
-test:amazonlinux-2:x86_64:
-  extends: .test:amazonlinux
-  image: cincproject/omnibus-amazonlinux:2
-  dependencies:
-    - package:amazonlinux-2:x86_64
-  tags:
-    - docker-x86_64
-  variables:
-    PLATFORM_VER: "2"
-
-test:amazonlinux-2:aarch64:
-  extends: .test:amazonlinux
-  image: cincproject/omnibus-amazonlinux:2
-  dependencies:
-    - package:amazonlinux-2:aarch64
-  tags:
-    - docker-aarch64
-  variables:
-    PLATFORM_VER: "2"
-
 test:centos-6:x86_64:
   extends: .test:centos
   image: cincproject/omnibus-centos:6
-  dependencies:
+  needs:
     - package:centos-6:x86_64
   tags:
     - docker-x86_64
@@ -313,7 +319,7 @@ test:centos-6:x86_64:
 test:centos-7:x86_64:
   extends: .test:centos
   image: cincproject/omnibus-centos:7
-  dependencies:
+  needs:
     - package:centos-7:x86_64
   tags:
     - docker-x86_64
@@ -323,7 +329,7 @@ test:centos-7:x86_64:
 test:centos-7:aarch64:
   extends: .test:centos
   image: cincproject/omnibus-centos:7
-  dependencies:
+  needs:
     - package:centos-7:aarch64
   tags:
     - docker-aarch64
@@ -333,7 +339,7 @@ test:centos-7:aarch64:
 test:centos-8:x86_64:
   extends: .test:centos
   image: cincproject/omnibus-centos:8
-  dependencies:
+  needs:
     - package:centos-8:x86_64
   tags:
     - docker-x86_64
@@ -343,7 +349,7 @@ test:centos-8:x86_64:
 test:centos-8:aarch64:
   extends: .test:centos
   image: cincproject/omnibus-centos:8
-  dependencies:
+  needs:
     - package:centos-8:aarch64
   tags:
     - docker-aarch64
@@ -353,7 +359,7 @@ test:centos-8:aarch64:
 test:debian-8:x86_64:
   extends: .test:debian
   image: cincproject/omnibus-debian:8
-  dependencies:
+  needs:
     - package:debian-8:x86_64
   tags:
     - docker-x86_64
@@ -363,7 +369,7 @@ test:debian-8:x86_64:
 test:debian-9:x86_64:
   extends: .test:debian
   image: cincproject/omnibus-debian:9
-  dependencies:
+  needs:
     - package:debian-9:x86_64
   tags:
     - docker-x86_64
@@ -373,7 +379,7 @@ test:debian-9:x86_64:
 test:debian-10:x86_64:
   extends: .test:debian
   image: cincproject/omnibus-debian:10
-  dependencies:
+  needs:
     - package:debian-10:x86_64
   tags:
     - docker-x86_64
@@ -384,7 +390,7 @@ test:macos-10.14:
   extends: .test:macos
   tags:
     - macos-10.14
-  dependencies:
+  needs:
     - package:macos-10.14
   variables:
     PLATFORM_VER: "10.14"
@@ -393,7 +399,7 @@ test:macos-10.15:
   extends: .test:macos
   tags:
     - macos-10.15
-  dependencies:
+  needs:
     - package:macos-10.15
   variables:
     PLATFORM_VER: "10.15"
@@ -401,7 +407,7 @@ test:macos-10.15:
 test:opensuse-15:x86_64:
   extends: .test:opensuse
   image: cincproject/omnibus-opensuse:15
-  dependencies:
+  needs:
     - package:opensuse-15:x86_64
   tags:
     - docker-x86_64
@@ -411,7 +417,7 @@ test:opensuse-15:x86_64:
 test:ubuntu-16.04:x86_64:
   extends: .test:ubuntu
   image: cincproject/omnibus-ubuntu:16.04
-  dependencies:
+  needs:
     - package:ubuntu-16.04:x86_64
   tags:
     - docker-x86_64
@@ -421,7 +427,7 @@ test:ubuntu-16.04:x86_64:
 test:ubuntu-18.04:x86_64:
   extends: .test:ubuntu
   image: cincproject/omnibus-ubuntu:18.04
-  dependencies:
+  needs:
     - package:ubuntu-18.04:x86_64
   tags:
     - docker-x86_64
@@ -431,7 +437,7 @@ test:ubuntu-18.04:x86_64:
 test:ubuntu-20.04:x86_64:
   extends: .test:ubuntu
   image: cincproject/omnibus-ubuntu:20.04
-  dependencies:
+  needs:
     - package:ubuntu-20.04:x86_64
   tags:
     - docker-x86_64
@@ -440,7 +446,7 @@ test:ubuntu-20.04:x86_64:
 
 test:windows-2012r2:
   extends: .test:windows
-  dependencies:
+  needs:
     - package:windows-2012r2
   variables:
     PLATFORM_VER: "2012r2"
@@ -488,6 +494,22 @@ deploy:
     - rsync -avH --delete data/ cinc@${DOWNLOADS_HOST}:/data/incoming/files/${CHANNEL}/cinc-auditor/$(cat VERSION)/
     - ssh cinc@${DOWNLOADS_HOST} "chmod 755 /data/incoming/files/${CHANNEL}/cinc-auditor/$(cat VERSION)/"
 
+deploy:bio:linux:
+  stage: deploy
+  # Only run if this is triggered from the web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "web"
+      when: on_success
+    - when: never
+  extends:
+    - .bio_setup
+  tags:
+    - docker-x86_64
+  dependencies:
+    - package:bio:linux
+  script:
+    - bio pkg upload results/*.hart
+
 deploy-gems:
   stage: deploy
   # Only run if this is triggered from the web
@@ -533,10 +555,28 @@ publish-docker:
     - docker-x86_64
   dependencies:
     - patch
+    - deploy-gems
   script:
     - ./docker.sh
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
+
+publish:bio:linux:
+  # Only run if this is triggered from the web
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "web"
+      when: on_success
+    - when: never
+  dependencies:
+    - package:bio:linux
+    - deploy:bio:linux
+  extends:
+    - .bio_setup
+  stage: publish
+  script:
+    - bio pkg install core/jq-static -b
+    - export PKG=$(bio pkg info results/*.hart -j | jq '[.origin,.name,.version,.release] | join("/")')
+    - bio pkg promote $PKG $CHANNEL
 
 .cleanup:
   stage: cleanup
