Make this a manual trigger

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -498,7 +498,7 @@ deploy:bio:linux:
   # Only run if this is triggered from the web
   rules:
     - if: $CI_PIPELINE_SOURCE == "web"
-      when: on_success
+      when: manual
     - when: never
   extends:
     - .bio_setup
