--- a/.gitlab/test.yml
+++ b/.gitlab/test.yml
@@ -3,7 +3,10 @@
   script:
     - cinc-auditor version
     - cinc-auditor detect
-    - cinc-auditor exec test-baseline
+    - cinc-auditor exec test-baseline --no-distinct-exit --reporter cli junit:junit.xml
+  artifacts:
+    reports:
+      junit: junit.xml
 
 .test:amazonlinux:
   extends: .test
@@ -33,7 +36,10 @@
   script:
     - cinc-auditor version
     - cinc-auditor detect
-    - cinc-auditor exec test-baseline
+    - cinc-auditor exec test-baseline --no-distinct-exit --reporter cli junit:junit.xml
+  artifacts:
+    reports:
+      junit: junit.xml
   after_script:
     - sudo scripts/uninstall-cinc-auditor-macos.sh
 
@@ -63,6 +69,9 @@
     - echo $env:PATH
     - cinc-auditor version
     - cinc-auditor detect
-    - cinc-auditor exec test-baseline
+    - cinc-auditor exec test-baseline --no-distinct-exit --reporter cli junit:junit.xml
+  artifacts:
+    reports:
+      junit: junit.xml
   after_script:
     - ./scripts/uninstall-cinc-auditor.ps1
