Enable git caching by default
This should speed up builds considerably and can be easily cleared if we have
issues.

Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ variables:
   REF: master
   CHANNEL: unstable
   CINC_PRODUCT: cinc-auditor
+  GIT_CACHE: "true"
 
 workflow:
   rules:
@@ -31,10 +32,6 @@ patch:
   script:
     - echo "Cloning from $ORIGIN"
     - ./patch.sh
-    - mkdir -p ${CI_PROJECT_DIR}/{cache,cache/git_cache}
-    - echo "cache_dir '${CI_PROJECT_DIR}/cache'" >> inspec/omnibus/omnibus.rb
-    - echo "git_cache_dir '${CI_PROJECT_DIR}/cache/git_cache'" >> inspec/omnibus/omnibus.rb
-    - sed -i -e 's/^use_git_caching false/use_git_caching true/g' inspec/omnibus/omnibus.rb
   artifacts:
     expire_in: 1mo
     paths:
