Force cleanup of cache dirs on MacOS / Windows
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -589,6 +589,7 @@ publish:bio:linux:
   when: always
   script:
     - sudo rm -rf inspec/
+    - sudo rm -rf /builds/cinc-project/distribution/auditor/
 
 cleanup:macos-10.14:
   extends: .cleanup
@@ -599,3 +600,10 @@ cleanup:macos-10.15:
   extends: .cleanup
   tags:
     - macos-10.15
+
+cleanup:windows-2012r2:
+  extends: .cleanup
+  tags:
+    - windows-x64
+  script:
+    - Remove-Item -Recurse -Force C:\builds\cinc\distribution\auditor
