Ensure we have curl and bash so we can deploy docker images properly
Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -555,8 +555,10 @@ publish-docker:
   dependencies:
     - patch
     - deploy-gems
+  before_script:
+    - apk add curl bash
   script:
-    - ./docker.sh
+    - bash docker.sh
   variables:
     DOCKER_TLS_CERTDIR: "/certs"
 
